# onur

./: .clang-format  .containerignore  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Containerfile  GNUmakefile  LICENSE  Makefile  PROTOCOL.md  README.md  TODO.md  container-commands  main.cpp  manifest.scm  meson.build  prfix.bash
.github/workflows/: tests.yml
include/: actions.hpp  commands.hpp  files.h  files.hpp  globals.hpp  konfig.hpp  project.hpp  repository.hpp
src/: CMakeLists.txt  commands.cc  commands.cpp  files.cc  files.cpp  globals.cpp  konfig.cpp  main.cc  main.cpp  meson.build  repository.cpp
src/common/: globals.cpp
src/database/: parse.cpp  repository.cpp
src/domain/: konfig.cpp
src/handlers/: actions.cpp  commands.cpp  helpers.cpp
src/include/: actions.hpp  commands.hpp  globals.hpp  helpers.hpp  konfig.hpp  parse.hpp  project.hpp  repository.hpp
tests/: CMakeLists.txt  meson.build  test_globals.cpp  test_main.cpp
tests/include/: test_globals.hpp
tests/integration_tests/: test_globals.cpp
